fix responsive table from having a double border

--- a/objects/tables/_table-object.scss
+++ b/objects/tables/_table-object.scss
@@ -166,6 +166,10 @@
             td{
                 display: block;
 
+                @include media-query(palm){
+                    margin-top: -1px;
+                }
+
                 &:before{
                     display: inline-block;
                     margin-right: 15px;
